# CString

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cstring/: cstring.c  cstring.h
tests/: CMakeLists.txt  cstring_at_test.c  cstring_back_test.c  cstring_begin_test.c  cstring_capacity_test.c  cstring_clear_test.c  cstring_copy_test.c  cstring_create_test.c  cstring_creation_test.c  cstring_data_test.c  cstring_destroy_test.c  cstring_empty_test.c  cstring_end_test.c  cstring_equal_test.c  cstring_erase_test.c  cstring_length_test.c  cstring_maxsize_test.c  cstring_replace_test.c  cstring_resize_test.c  cstring_substr_test.c  test_unit.h
